--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: Generate SBOM Report with Syft
 
 on:
-  workflow_dispatch:     #added
   push:
     branches:
       - master
@@ -21,12 +20,12 @@ jobs:
       run: |
         curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
 
-    - name: Generate SBOM
+    - name: Generate SBOM                      #Modified
       run: |
-        syft docker.io/kodekloud/webapp-color:latest -o spdx-json > spdx.json
+        syft docker.io/kodekloud/webapp-color:latest -o spdx-json > spdx.json  
 
     - name: Upload SBOM Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: spdx-report
-        path: spdx.json       #modified
+        name: sbom-report
+        path: sbom.xml
